frontend: update UX reservations calendar, reservations list and delete a reservation
