# packages/backend/src/auth/auth.controller.ts
@@ -3,7 +3,7 @@ import { AuthService } from './auth.service'
 import { RegisterUserDto as RegisterUserDto } from 'src/auth/dto/register-user.dto'
 import { LoginUserDto } from 'src/auth/dto/login-user.dto'
 import { GetUser } from 'src/common/decorators/get-user.decorator'
-import { User } from 'generated/prisma/client'
+import { User, UserRole } from 'generated/prisma/client'
 import { Auth } from 'src/auth/decorators/auth.decorator'
 import { AuthResponse } from 'src/auth/entities/auth-response.entity'
 import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger'
@@ -14,6 +14,7 @@ export class AuthController {
   constructor(private readonly authService: AuthService) {}
 
   @Post('register')
+  @Auth(UserRole.MANAGER)
   @ApiOperation({ summary: 'Register a new user' })
   @ApiResponse({
     status: 201,
